# RAG-pipeline-with-MongoDB-vector-search

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  rag.ipynb
